--- a/sip-servlets-test-suite/pom.xml
+++ b/sip-servlets-test-suite/pom.xml
@@ -2,12 +2,18 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>mobicents</artifactId>
+		<groupId>org.mobicents</groupId>
+		<version>1-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
+	</parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-test-suite-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>0.3</version>
+	<version>0.4</version>
 	<name>sip-servlets-test-suite-parent</name>
-	<url>http://maven.apache.org</url>
+	<url>http://www.mobicents.org/tests.html</url>
 	<modules>
 		<module>applications</module>		
 		<module>testsuite</module>
