--- a/sip-servlets-test-suite/applications/notifier-servlet/src/main/sipapp/WEB-INF/web.xml
+++ b/sip-servlets-test-suite/applications/notifier-servlet/src/main/sipapp/WEB-INF/web.xml
@@ -1,8 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<web-app>
+<sip-app>
 	<app-name>org.mobicents.servlet.sip.testsuite.NotifierSipServlet</app-name>
 	<display-name>Notifier Sip Servlet</display-name>
 	<description>Notifier Sip Servlet</description>
-		
-</web-app>
+	
+	<main-servlet>
+		NotifierSipServlet
+	</main-servlet>
+
+	<servlet>
+		<servlet-name>NotifierSipServlet</servlet-name>
+		<display-name>NotifierSipServlet</display-name>
+		<description>Notifier SIP servlet</description>
+		<servlet-class>
+			org.mobicents.servlet.sip.testsuite.NotifierSipServlet
+		</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+</sip-app>
