--- a/sip-servlets-test-suite/applications/pom.xml
+++ b/sip-servlets-test-suite/applications/pom.xml
@@ -5,13 +5,11 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-test-suite-parent</artifactId>
-		<version>0.3</version>
+		<version>0.4</version>
 	</parent>
-	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-test-suite-applications</artifactId>
 	<packaging>pom</packaging>
 	<name>Sip Servlets Test Suite Applications Parent Pom</name>
-	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<modules>
 		<module>simple-sip-servlet</module>
 		<module>shootist-sip-servlet</module>
@@ -45,32 +43,30 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.14</version>
+			<version>${log4j.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging-api</artifactId>
-			<version>1.0.4</version>
+			<version>${commons-logging.version}</version>
 			<scope>provided</scope>
-		</dependency>
+		</dependency>	
 
 		<!-- JAIN-SIP dependency for the shootist -->
 		<dependency>
 			<groupId>javax.sip</groupId>
 			<artifactId>jain-sip-api</artifactId>
-			<version>1.2.1</version>
+			<version>${jain-sip.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>javax.sip</groupId>
 			<artifactId>jain-sip-ri</artifactId>
-			<version>1.2.1</version>
+			<version>${jain-sip.version}</version>
 			<scope>provided</scope>
 		</dependency>
-
-		
 
 		<!-- j2ee dependencies -->
 		<dependency>
@@ -83,7 +79,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.3</version>
+			<version>1.1.4</version>
 			<scope>provided</scope>
 		</dependency>
 		
@@ -104,14 +100,7 @@
 					<source>1.5</source>
 					<target>1.5</target>
 				</configuration>
-			</plugin>
-			<!--plugin>
-				<artifactId>maven-war-plugin</artifactId>
-				<configuration>
-					<webXml>${basedir}/src/main/sipapp/WEB-INF/sip.xml</webXml>
-					<warSourceDirectory>${basedir}/src/main/sipapp</warSourceDirectory>
-				</configuration>
-			</plugin-->
+			</plugin>			
 		</plugins>
 	</build>
 </project>
