--- a/sip-servlets-test-suite/applications/subscriber-servlet/src/main/sipapp/WEB-INF/web.xml
+++ b/sip-servlets-test-suite/applications/subscriber-servlet/src/main/sipapp/WEB-INF/web.xml
@@ -1,8 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<web-app>
+<sip-app>
 	<app-name>org.mobicents.servlet.sip.testsuite.SubscriberSipServlet</app-name>
 	<display-name>Subscriber Sip Servlet</display-name>
 	<description>Subscriber Sip Servlet</description>
-		
-</web-app>
+	
+	<main-servlet>
+		SubscriberSipServlet
+	</main-servlet>
+
+	<servlet>
+		<servlet-name>SubscriberSipServlet</servlet-name>
+		<display-name>SubscriberSipServlet</display-name>
+		<description>Subscriber SIP servlet</description>
+		<servlet-class>
+			org.mobicents.servlet.sip.testsuite.SubscriberSipServlet
+		</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+
+	<listener>
+		<listener-class>
+			org.mobicents.servlet.sip.testsuite.SubscriberSipServlet
+		</listener-class>
+	</listener>
+</sip-app>
