--- a/sip-servlets-pbx/pom.xml
+++ b/sip-servlets-pbx/pom.xml
@@ -3,12 +3,18 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>mobicents</artifactId>
+		<groupId>org.mobicents</groupId>
+		<version>1-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
+	</parent>
 	<groupId>org.mobicents.servlet.sip.pbx</groupId>
 	<artifactId>sip-servlets-pbx</artifactId>
 	<packaging>war</packaging>
 	<version>1.0</version>
 	<name>Sample PBX</name>
-	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
+	<url>http://www.mobicents.org/products_sip_servlets.html</url>
 	<dependencies>
 		<!-- test dependencies -->
 		<dependency>
@@ -21,15 +27,15 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.14</version>
+			<version>${log4j.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging-api</artifactId>
-			<version>1.0.4</version>
+			<version>${commons-logging.version}</version>
 			<scope>provided</scope>
-		</dependency>		
+		</dependency>	
 		<!-- j2ee dependencies -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -40,19 +46,19 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.3</version>
+			<version>1.1.4</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
         		<groupId>org.hibernate</groupId>
         		<artifactId>hibernate</artifactId>
-        		<version>3.2.5.ga</version>
+        		<version>${hibernate-core.version}</version>
       	</dependency>
 		<dependency>
         		<groupId>hsqldb</groupId>
         		<artifactId>hsqldb</artifactId>
-        		<version>1.8.0.7</version>
+        		<version>${hsqldb.version}</version>
       	</dependency>
 
 	</dependencies>
@@ -74,13 +80,6 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		<extensions>
-			<extension>
-				<groupId>org.jvnet.wagon-svn</groupId>
-				<artifactId>wagon-svn</artifactId>
-				<version>RELEASE</version>
-			</extension>
-		</extensions>
 	</build>
 	<profiles>
 		<profile>			
@@ -129,24 +128,7 @@
 								</goals>
 							</execution>
 						</executions>
-					</plugin>
-					<plugin>
-		 	        	<groupId>org.apache.maven.plugins</groupId>
-		 	        	<artifactId>maven-dependency-plugin</artifactId>
-		 	        	<executions>		 	          		
-		 	          		<execution>
-		 	            			<id>copy-to-jboss-lib</id>
-		 	            			<phase>package</phase>
-		 	            			<goals>
-										<goal> copy-dependencies </goal>
-		 	            			</goals>
-		 	            			<configuration>
-									<includeArtifactIds>jain-sip-api,jain-sip-ri,concurrent,dnsjava,stun4j</includeArtifactIds>
-					    			<outputDirectory>${env.JBOSS_HOME}/server/default/lib</outputDirectory>
-		 	            			</configuration>
-		 	          		</execution>
-		 	        	</executions>
-		 	      	</plugin>
+					</plugin>				
 				</plugins>
 			</build>
 		</profile>
@@ -154,18 +136,26 @@
 	<!-- repositories -->
 	<repositories>
 		<repository>
-			<id>maven2-repository.dev.java.net</id>
-			<name>Java.net Repository for Maven</name>
-			<url>http://download.java.net/maven/2/</url>
-			<layout>default</layout>
+			<id>JbossRepository</id>
+			<name>Jboss Repository</name>
+			<url>http://repository.jboss.org/maven2</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
+		<repository>
+			<id>jboss-snapshots</id>
+			<name>JBoss Snapshot Repository</name>
+			<url>http://snapshots.jboss.org/maven2</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
 		</repository>
 	</repositories>
-
-	<distributionManagement>
-		<repository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>maven2-repository</id>
-			<url>java-net:/maven2-repository/trunk/www/repository/</url>
-		</repository>
-	</distributionManagement>
 </project>
