--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -159,6 +159,53 @@
 		</plugins>
 	</build>
 	<profiles>
+			<profile>			
+			<id>tomcat-distro</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>			
+			<build>			
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<version>1.1</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<configuration>
+									<tasks>
+										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${CATALINA_HOME}\lib"/>
+										<copy verbose="true" file="docs/logging.properties" todir="${CATALINA_HOME}/conf"/>
+										<copy verbose="true" file="docs/log4j.xml" todir="${CATALINA_HOME}/lib"/>
+									</tasks>
+								</configuration>
+								<goals>
+									<goal>run</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+		 	        	<groupId>org.apache.maven.plugins</groupId>
+		 	        	<artifactId>maven-dependency-plugin</artifactId>
+		 	        	<executions>
+		 	          		<execution>
+		 	            			<id>copy-to-tomcat-lib</id>
+		 	            			<phase>package</phase>
+		 	            			<goals>
+										<goal> copy-dependencies </goal>
+		 	            			</goals>
+		 	            			<configuration>
+									<includeArtifactIds>sip-balancer,jain-sip-api,jain-sip-ri,concurrent,log4j,commons-logging,dnsjava,stun4j</includeArtifactIds>
+					    			<outputDirectory>${CATALINA_HOME}/lib</outputDirectory>
+		 	            			</configuration>
+		 	          		</execution>
+		 	        	</executions>
+		 	      	</plugin>
+				</plugins>
+			</build>
+		</profile>
 		<profile>			
 			<id>tomcat</id>
 			<activation>
@@ -282,7 +329,7 @@
 										<goal> copy-dependencies </goal>
 		 	            			</goals>
 		 	            			<configuration>
-									<includeArtifactIds>jain-sip-api,jain-sip-ri,concurrent,dnsjava,stun4j</includeArtifactIds>
+									<includeArtifactIds>sip-balancer,jain-sip-api,jain-sip-ri,concurrent,dnsjava,stun4j</includeArtifactIds>
 					    			<outputDirectory>${JBOSS_HOME}/server/default/lib/</outputDirectory>
 		 	            			</configuration>
 		 	          		</execution>
