--- a/sip-servlets-examples/facebook-c2c/pom.xml
+++ b/sip-servlets-examples/facebook-c2c/pom.xml
@@ -10,11 +10,11 @@
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.example</groupId>
-	<artifactId>click-to-call-servlet</artifactId>
+	<artifactId>facebook-click-to-call-servlet</artifactId>
 	<packaging>war</packaging>
 	<version>1.0</version>
 	<name>Facebook Click To Call</name>
-	<url>http://vladimirralev.blogspot.com/2008/05/mobicents-on-javaone-2008.html</url>
+	<url>http://www.mobicents.org/facebook.c2c.html</url>
 	<dependencies>
 		<!-- test dependencies -->
 		<dependency>
