Preparing for 0.4 release. Updating shopping demo to latest BETA2 snapshot jars.
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@1992 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/shopping-demo/ear/pom.xml
+++ b/sip-servlets-examples/shopping-demo/ear/pom.xml
@@ -158,6 +158,25 @@
 			<version>1.0</version>
 			<type>jar</type>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.mobicents.servers.media</groupId>
+			<artifactId>mobicents-server-media-mscontrol</artifactId>
+			<version>1.0.0.BETA2-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.mobicents.servers.media</groupId>
+					<artifactId>mobicents-server-media-jar</artifactId>
+				</exclusion>
+			</exclusions>
+			<type>jar</type>
+		</dependency>
+		<dependency>		
+			<groupId>org.mobicents.servers.media</groupId>
+			<artifactId>mobicents-server-media-constants</artifactId>
+			<version>1.0.0.BETA2-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>shopping-demo</finalName>
@@ -172,7 +191,17 @@
 			<plugin>
 				<artifactId>maven-ear-plugin</artifactId>
 				<configuration>
-					<modules>						
+					<modules>	
+						<jarModule>
+							<groupId>org.mobicents.servers.media</groupId>
+							<artifactId>mobicents-server-media-mscontrol</artifactId>
+							<bundleDir>lib</bundleDir>
+						</jarModule>
+						<jarModule>		
+							<groupId>org.mobicents.servers.media</groupId>
+							<artifactId>mobicents-server-media-constants</artifactId>
+							<bundleDir>lib</bundleDir>
+						</jarModule>					
 						<jarModule>
 							<groupId>org.mobicents.external.freetts</groupId>
 							<artifactId>freetts</artifactId>
