--- a/sip-servlets-bootstrap/src/site/resources/speeddial-locationservice-dar.properties
+++ b/sip-servlets-bootstrap/src/site/resources/speeddial-locationservice-dar.properties
@@ -1,2 +1,3 @@
 INVITE: ("org.mobicents.servlet.sip.example.SpeedDialSipServlet", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "0"), \
 ("org.mobicents.servlet.sip.example.LocationServiceSipServlet", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "1")
+REGISTER: ("org.mobicents.servlet.sip.example.LocationServiceSipServlet", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "0")
