--- a/sip-servlets-examples/shopping-demo/business/pom.xml
+++ b/sip-servlets-examples/shopping-demo/business/pom.xml
@@ -102,13 +102,13 @@
 		<dependency>
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-server-media-mscontrol</artifactId>
-			<version>1.0.0.BETA1-CP1</version>
+			<version>1.0.0.BETA2-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>		
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-server-media-constants</artifactId>
-			<version>1.0.0.BETA1-CP1</version>
+			<version>1.0.0.BETA2-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
