--- a/sip-servlets-examples/shopping-demo/web/pom.xml
+++ b/sip-servlets-examples/shopping-demo/web/pom.xml
@@ -53,14 +53,12 @@
 		<dependency>
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-server-media-mscontrol</artifactId>
-			<version>1.0.0.BETA1-CP1</version>
-			<scope>provided</scope>
+			<version>1.0.0.BETA2-SNAPSHOT</version>
 		</dependency>
 		<dependency>		
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-server-media-constants</artifactId>
-			<version>1.0.0.BETA1-CP1</version>
-			<scope>provided</scope>
+			<version>1.0.0.BETA2-SNAPSHOT</version>
 		</dependency>
 		<!-- j2ee dependencies -->
 		<dependency>
@@ -71,7 +69,7 @@
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-debug</artifactId>
-			<version>${jboss-seam.version}</version>
+			<version>2.0.1.GA</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.jboss.seam</groupId>
@@ -82,7 +80,7 @@
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-ui</artifactId>
-			<version>${jboss-seam.version}</version>
+			<version>2.0.1.GA</version>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-beanutils</groupId>
