--- a/sip-servlets-examples/shopping-demo/web/pom.xml
+++ b/sip-servlets-examples/shopping-demo/web/pom.xml
@@ -54,11 +54,13 @@
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-server-media-mscontrol</artifactId>
 			<version>1.0.0.BETA2-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>		
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-server-media-constants</artifactId>
 			<version>1.0.0.BETA2-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 		<!-- j2ee dependencies -->
 		<dependency>
