Changing versions to 0.5-SNAPSHOT and 1.1.5-SNAPSHOT for spec
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2079 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/testsuite/src/test/resources/logging.properties
+++ b/sip-servlets-test-suite/testsuite/src/test/resources/logging.properties
@@ -1,18 +1,18 @@
 #FILE for JULI - tomcat implementation of loggin facitlity
 
-#handlers = org.apache.juli.FileHandler, java.util.logging.ConsoleHandler
-handlers = org.apache.juli.FileHandler
+handlers = org.apache.juli.FileHandler, java.util.logging.ConsoleHandler
+#handlers = org.apache.juli.FileHandler
 
 ############################################################
 # Handler specific properties.
 # Describes specific configuration info for Handlers.
 ############################################################
 
-org.apache.juli.FileHandler.level = FINE
+org.apache.juli.FileHandler.level = FINEST
 org.apache.juli.FileHandler.directory = logs
 org.apache.juli.FileHandler.prefix = testsuite.
 
-java.util.logging.ConsoleHandler.level = FINE
+java.util.logging.ConsoleHandler.level = FINEST
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
 # ROOT LOGGER LEVEL
@@ -31,6 +31,7 @@ java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 #    * OFF
 
 #Default levels for our packages
+org.mobicents.tools = FINEST
 org.mobicents.servlet.sip.level = FINE
 org.mobicents.servlet.sip.dd.level = WARNING
 org.mobicents.servlet.sip.startup.level = INFO
