--- a/sip-servlets-bootstrap/pom.xml
+++ b/sip-servlets-bootstrap/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-bootstrap</artifactId>
 	<packaging>pom</packaging>
-	<version>0.4</version>
+	<version>0.5-SNAPSHOT</version>
 	<name>Mobicents Sip Servlets</name>
 	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<ciManagement>
