--- a/sip-servlets-examples/jslee-sips-interop/jslee-services/interop-sbb/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/jslee-services/interop-sbb/pom.xml
@@ -21,7 +21,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.4</version>
+			<version>1.1.5-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>		
