--- a/sip-servlets-test-suite/applications/subscriber-servlet/pom.xml
+++ b/sip-servlets-test-suite/applications/subscriber-servlet/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-test-suite-applications</artifactId>
-		<version>0.4</version>
+		<version>0.5-SNAPSHOT</version>
 	</parent>
 	<artifactId>subscriber-sip-servlet</artifactId>
 	<packaging>war</packaging>
