--- a/sip-servlets-test-suite/pom.xml
+++ b/sip-servlets-test-suite/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-test-suite-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>0.4</version>
+	<version>0.5-SNAPSHOT</version>
 	<name>sip-servlets-test-suite-parent</name>
 	<url>http://www.mobicents.org/tests.html</url>
 	<modules>
