--- a/sip-servlets-impl/.classpath
+++ b/sip-servlets-impl/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
   <classpathentry kind="src" path="src/main/java"/>
+  <classpathentry kind="src" path="src/main/resources"/>
   <classpathentry kind="lib" path="lib/Stun4J.jar"/>
   <classpathentry kind="lib" path="lib/jbosssx.jar"/>
   <classpathentry kind="lib" path="lib/jbossweb-service.jar"/>
