Fix for Issue 199 : Implement the new PFD section 15.4.2 Application Router Packaging and Deployment. ADDED : sip application router project
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2088 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/pom.xml
+++ b/sip-servlets-bootstrap/pom.xml
@@ -83,6 +83,7 @@
 	<modules>
 		<module>../sip-servlets-spec</module>
 		<module>../sip-servlets-impl</module>
+		<module>../sip-servlets-application-router</module>
 	</modules>
 	
 	<properties>
