minor fixes to release scripts
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2113 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -108,14 +108,8 @@
          	<zipfileset dir="${base.path}/jboss-${jboss.version}/bin" prefix="bin">
             	<exclude name="*.sh" />
          	</zipfileset>
-         	<zipfileset dir="${base.path}/jboss-${jboss.version}" prefix="">
-            	<exclude name="bin/**"/>
-            	<exclude name="server/*/data/**"/>
-            	<exclude name="server/*/log/**"/>
-            	<exclude name="server/*/tmp/**"/>
-            	<exclude name="server/*/work/**"/>
-            	<exclude name="server/tmp/**"/>
-         	</zipfileset>
+         	<zipfileset dir="${base.path}/jboss-${jboss.version}" prefix="" 
+                excludes="**/bin/** **/server/*/data/** **/server/*/log/** **/server/*/tmp/** **/server/*/work/** **/server/tmp/**"/>
 		</zip>
 	</target>
 
