Moving to jsip version 1.2.73 and Fix for Issue 121 (http://code.google.com/p/mobicents/issues/detail?id=121) : 15.11 Encode URI and Session Targeting
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2129 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/testsuite/pom.xml
+++ b/sip-servlets-test-suite/testsuite/pom.xml
@@ -65,14 +65,14 @@
 		<dependency>
 			<groupId>javax.sip</groupId>
 			<artifactId>jain-sip-api</artifactId>
-			<version>${jain-sip.version}</version>
+			<version>${jain-sip-api.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>javax.sip</groupId>
 			<artifactId>jain-sip-ri</artifactId>
-			<version>${jain-sip.version}</version>
+			<version>${jain-sip-ri.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
