--- a/sip-servlets-test-suite/.classpath
+++ b/sip-servlets-test-suite/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" output="applications/simple-sip-servlet/src/main/sipapp/WEB-INF/classes" path="applications/simple-sip-servlet/src/main/java"/>
+	<classpathentry kind="src" output="applications/chatroom-sip-servlet/src/main/sipapp/WEB-INF/classes" path="applications/chatroom-sip-servlet/src/main/java"/>
 	<classpathentry kind="src" output="applications/notifier-servlet/src/main/sipapp/WEB-INF/classes" path="applications/notifier-servlet/src/main/java"/>
 	<classpathentry kind="src" output="applications/subscriber-servlet/src/main/sipapp/WEB-INF/classes" path="applications/subscriber-servlet/src/main/java"/>
 	<classpathentry kind="src" output="applications/servlet-mapping-servlet/src/main/sipapp/WEB-INF/classes" path="applications/servlet-mapping-servlet/src/main/java"/>
@@ -33,7 +34,6 @@
 	<classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging-api/1.0.4/commons-logging-api-1.0.4.jar"/>
 	<classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.1/commons-logging-1.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-ri/1.2.1/jain-sip-ri-1.2.1.jar"/>
 	<classpathentry kind="lib" path="testsuite/lib/sipunit.jar" sourcepath="/sipunit/src"/>
 	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/catalina/6.0.14/catalina-6.0.14.jar" sourcepath="/TOMCAT_HOME/java"/>
 	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/coyote/6.0.14/coyote-6.0.14.jar"/>
@@ -46,5 +46,6 @@
 	<classpathentry kind="var" path="M2_REPO/org/mobicents/tools/sip-balancer/1.0-SNAPSHOT/sip-balancer-1.0-SNAPSHOT.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-application-router"/>
 	<classpathentry kind="var" path="M2_REPO/org/mobicents/servlet/sip/sip-servlets-application-router/0.5-SNAPSHOT/sip-servlets-application-router-0.5-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-ri/1.2.73/jain-sip-ri-1.2.73.jar" sourcepath="/JAIN-SIP_HOME/src"/>
 	<classpathentry kind="output" path="testsuite/target/test-classes"/>
 </classpath>
