--- a/sip-servlets-test-suite/applications/pom.xml
+++ b/sip-servlets-test-suite/applications/pom.xml
@@ -29,7 +29,9 @@
 		<module>annotated-servlet</module>
 		<module>servlet-mapping-servlet</module>
 		<module>notifier-servlet</module>
-		<module>subscriber-servlet</module>		
+		<module>subscriber-servlet</module>
+		<module>chatroom-sip-servlet</module>
+		<module>handler-sip-servlet</module>		
 	</modules>
 	<dependencies>
 		<!-- test dependencies -->
