Fix for Issue 251 : RequestDispatcher implementation (http://code.google.com/p/mobicents/issues/detail?id=251)
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2147 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/applications/chatroom-sip-servlet/.project
+++ b/sip-servlets-test-suite/applications/chatroom-sip-servlet/.project
@@ -1,5 +1,5 @@
 <projectDescription>
-  <name>chtroom-sip-servlet</name>
+  <name>chatroom-sip-servlet</name>
   <comment/>
   <projects/>
   <buildSpec>
