--- a/sip-servlets-test-suite/applications/dispatcher-sip-servlet/.project
+++ b/sip-servlets-test-suite/applications/dispatcher-sip-servlet/.project
@@ -1,5 +1,5 @@
 <projectDescription>
-  <name>handler-sip-servlet</name>
+  <name>dispatcher-sip-servlet</name>
   <comment/>
   <projects/>
   <buildSpec>
