typo making the hudson job fail
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2166 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/applications/pom.xml
+++ b/sip-servlets-test-suite/applications/pom.xml
@@ -32,7 +32,7 @@
 		<module>subscriber-servlet</module>
 		<module>chatroom-sip-servlet</module>
 		<module>handler-sip-servlet</module>
-		<module>disptacher-sip-servlet</module>				
+		<module>dispatcher-sip-servlet</module>				
 	</modules>
 	<dependencies>
 		<!-- test dependencies -->
